--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "module-bolierplate-x",
+  "name": "module-boilerplate-x",
   "version": "1.0.0",
   "description": "Boilerplate for standard modules.",
-  "homepage": "https://github.com/Xotic750/module-bolierplate-x",
+  "homepage": "https://github.com/Xotic750/module-boilerplate-x",
   "author": {
     "name": "Graham Fairweather",
     "email": "xotic750@gmail.com"
@@ -22,10 +22,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Xotic750/module-bolierplate-x.git"
+    "url": "https://github.com/Xotic750/module-boilerplate-x.git"
   },
   "bugs": {
-    "url": "https://github.com/Xotic750/module-bolierplate-x/issues"
+    "url": "https://github.com/Xotic750/module-boilerplate-x/issues"
   },
   "dependencies": {},
   "devDependencies": {
@@ -69,8 +69,8 @@
     "lint": "eslint *.js tests/spec/*.js",
     "security": "nsp check",
     "test": "jasmine-node --matchall tests/spec/",
-    "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-bolierplate-x.js -u 'crypto' -s returnExports",
-    "uglify": "uglifyjs lib/module-bolierplate-x.js -o lib/module-bolierplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map filename=lib/module-bolierplate-x.map",
+    "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-boilerplate-x.js -u 'crypto' -s returnExports",
+    "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map filename=lib/module-boilerplate-x.map",
     "precommit": "npm run build:all",
     "prepush": "npm run build:all"
   }
