--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module-boilerplate-x",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Boilerplate for standard modules.",
   "homepage": "https://github.com/Xotic750/module-boilerplate-x",
   "author": {
@@ -29,7 +29,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@xotic750/eslint-config-standard-x": "^1.0.3",
+    "@xotic750/eslint-config-standard-x": "^1.3.0",
     "browserify": "^14.4.0",
     "browserify-derequire": "^0.9.4",
     "cross-env": "^5.0.1",
@@ -39,7 +39,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-compat": "^1.0.4",
     "eslint-plugin-css-modules": "^2.7.1",
-    "eslint-plugin-eslint-comments": "^1.0.1",
+    "eslint-plugin-eslint-comments": "^1.0.2",
     "eslint-plugin-jsdoc": "^3.1.0",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-no-use-extend-native": "^0.3.12",
@@ -63,12 +63,13 @@
     "build": "npm run clean && npm run lint && npm run browserify && npm run uglify && npm run docs && npm test",
     "build:jasmine": "npm run clean:jasmine && make-jasmine-spec-runner-html",
     "build:setver": "PKG_VER=$(node -p -e \"require('./package.json').version\") && replace-x \" @version .*\" \" @version ${PKG_VER}\" index.js",
-    "build:all": "npm run clean && npm run build:setver && npm run security && npm run lint && npm run browserify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
+    "build:all": "npm run clean && npm run build:setver  && npm run lint && npm run browserify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
     "start": "parallelshell \"serve\" \"nodemon --watch index.js --exec 'npm run build'\"",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
     "lint": "eslint *.js tests/spec/*.js",
     "security": "nsp check",
     "test": "jasmine-node --matchall tests/spec/",
+    "posttest": "npm run security",
     "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-boilerplate-x.js -u 'crypto' -s returnExports",
     "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map filename=lib/module-boilerplate-x.map",
     "precommit": "npm run build:all",
