--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module-boilerplate-x",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Boilerplate for standard modules.",
   "homepage": "https://github.com/Xotic750/module-boilerplate-x",
   "author": {
@@ -60,7 +60,7 @@
     "clean": "rimraf README.md lib/*",
     "clean:jasmine": "rimraf tests/index.html tests/run.js",
     "clean:all": "npm run clean:jasmine &&  npm run clean",
-    "build": "npm run clean && npm run lint && npm run browserify && npm run uglify && npm run docs && npm test",
+    "build": "npm run clean && npm run lint && npm run browserify && npm run uglify && npm run docs && npm test && npm run security",
     "build:jasmine": "npm run clean:jasmine && make-jasmine-spec-runner-html",
     "build:setver": "PKG_VER=$(node -p -e \"require('./package.json').version\") && replace-x \" @version .*\" \" @version ${PKG_VER}\" index.js",
     "build:all": "npm run clean && npm run build:setver  && npm run lint && npm run browserify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
@@ -69,7 +69,6 @@
     "lint": "eslint *.js tests/spec/*.js",
     "security": "nsp check",
     "test": "jasmine-node --matchall tests/spec/",
-    "posttest": "npm run security",
     "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-boilerplate-x.js -u 'crypto' -s returnExports",
     "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map filename=lib/module-boilerplate-x.map",
     "precommit": "npm run build:all",
