--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module-boilerplate-x",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Boilerplate for standard modules.",
   "homepage": "https://github.com/Xotic750/module-boilerplate-x",
   "author": {
@@ -38,9 +38,9 @@
     "es7-shim": "^6.0.0",
     "eslint": "^3.19.0",
     "eslint-plugin-compat": "^1.0.4",
-    "eslint-plugin-css-modules": "^2.7.1",
+    "eslint-plugin-css-modules": "^2.7.2",
     "eslint-plugin-eslint-comments": "^1.0.2",
-    "eslint-plugin-jsdoc": "^3.1.0",
+    "eslint-plugin-jsdoc": "^3.1.1",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-no-use-extend-native": "^0.3.12",
     "husky": "^0.13.4",
@@ -53,8 +53,8 @@
     "parallelshell": "^3.0.1",
     "replace-x": "^1.1.1",
     "rimraf": "^2.6.1",
-    "serve": "^5.2.3",
-    "uglify-js": "^3.0.18"
+    "serve": "^6.0.0",
+    "uglify-js": "^3.0.21"
   },
   "scripts": {
     "clean": "rimraf README.md lib/*",
@@ -63,7 +63,7 @@
     "build": "npm run clean && npm run lint && npm run browserify && npm run uglify && npm run docs && npm test && npm run security",
     "build:jasmine": "npm run clean:jasmine && make-jasmine-spec-runner-html",
     "build:setver": "PKG_VER=$(node -p -e \"require('./package.json').version\") && replace-x \" @version .*\" \" @version ${PKG_VER}\" index.js",
-    "build:all": "npm run clean && npm run build:setver  && npm run lint && npm run browserify && npm run uglify && npm run docs && npm run build:jasmine && npm test",
+    "production": "npm run clean:all && npm run build:jasmine && npm run build:setver && npm run build",
     "start": "parallelshell \"serve\" \"nodemon --watch index.js --exec 'npm run build'\"",
     "docs": "jsdoc2md --name-format --example-lang js index.js > README.md",
     "lint": "eslint *.js tests/spec/*.js",
@@ -71,7 +71,7 @@
     "test": "jasmine-node --matchall tests/spec/",
     "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-boilerplate-x.js -u 'crypto' -s returnExports",
     "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map filename=lib/module-boilerplate-x.map",
-    "precommit": "npm run build:all",
-    "prepush": "npm run build:all"
+    "precommit": "npm run production",
+    "prepush": "npm run production"
   }
 }
