--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "module-boilerplate-x",
-  "version": "1.8.1",
+  "version": "1.9.0",
   "description": "Boilerplate for standard modules.",
   "homepage": "https://github.com/Xotic750/module-boilerplate-x",
   "author": {
@@ -53,8 +53,8 @@
     "parallelshell": "^3.0.1",
     "replace-x": "^1.3.1",
     "rimraf": "^2.6.1",
-    "serve": "^6.0.1",
-    "uglify-js": "^3.0.23"
+    "serve": "^6.0.2",
+    "uglify-js": "^3.0.24"
   },
   "scripts": {
     "clean": "rimraf README.md lib/*",
@@ -71,7 +71,7 @@
     "security": "nsp check",
     "test": "jasmine-node --matchall tests/spec/",
     "browserify": "browserify -p browserify-derequire -e index.js -o lib/module-boilerplate-x.js -u 'crypto' -s returnExports",
-    "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --support-ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map",
+    "uglify": "uglifyjs lib/module-boilerplate-x.js -o lib/module-boilerplate-x.min.js --ie8 --compress --keep-fnames --mangle --beautify ascii_only=true,beautify=false --source-map",
     "precommit": "npm run production",
     "prepush": "npm run production"
   }
